Enhance README with comprehensive project details
Added detailed project features, structure, installation methods, usage guide, core components, configuration, troubleshooting, and contributing sections.